--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,17 @@
 cmake_minimum_required(VERSION 3.10)
 project(mdf)
 
-add_executable(mdf main.cpp ./src/Matriz2d.cpp)
+
+set(CMAKE_CXX_FLAGS "-O2")
+
+##
+## Voce pode usar o comando file para obter a lista de todos
+## arquivos nar raiz do projeto .cpp e de dentro do diretorio src
+file(GLOB source_files *.cpp src/*.cpp)
+
+# Com esse comando, vc consegue indicar para o compilador
+# a localização dos seus arquivos .h
+include_directories(include)
+
+# Observe abaixo o uso da variável source_files
+add_executable(mdf.exe ${source_files})
