modelos de vel agora possuem as informacoes do tempo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,10 @@ cmake_minimum_required(VERSION 3.10)
 project(mdf)
 find_package(OpenMP)
 
-if (OpenMP_FOUND)
-    set(CMAKE_CXX_FLAGS "-fopenmp")
-endif()
-
 set(CMAKE_CXX_FLAGS "-O3")
+if (OpenMP_FOUND)
+    set(CMAKE_CXX_FLAGS "-O3 -fopenmp")
+endif()
 
 ## Voce pode usar o comando file para obter a lista de todos
 ## arquivos na raiz do projeto .cpp e de dentro do  diretorio src
