--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,15 @@
 cmake_minimum_required(VERSION 3.10)
 project(acwv)
-find_package(OpenMP)
 
-set (CMAKE_CXX_COMPILER g++)
-set(CMAKE_CXX_FLAGS "-g -fopenmp")
-if (OpenMP_FOUND)
-    set(CMAKE_CXX_FLAGS "-march=native -ffast-math -O2 -fopenmp -ftree-vectorize")
-endif()
+find_package(MPI REQUIRED)
 
-## Voce pode usar o comando file para obter a lista de todos
-## arquivos na raiz do projeto .cpp e de dentro do  diretorio src
-file(GLOB source_files *.cpp src/*.cpp)
+set(CMAKE_CXX_COMPILER mpicxx)
 
-# Com esse comando, vc consegue indicar para o compilador
-# a localização dos seus arquivos .h
+set(GLOB source_files
+    src/main.cpp
+    src/*2d.cpp
+)
+
 include_directories(include)
 
-# Observe abaixo o uso da variável source_files
 add_executable(acwv ${source_files})
