implementing vtk imageData format for input

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,17 @@
 cmake_minimum_required(VERSION 3.10)
 project(acwv)
 
-find_package(MPI REQUIRED)
+find_package(VTK REQUIRED)
+include(${VTK_USE_FILE})
 
-set(CMAKE_CXX_COMPILER mpicxx)
+# find_package(MPI REQUIRED)
 
-set(GLOB source_files
-    src/main.cpp
-    src/*2d.cpp
-)
+# set(CMAKE_CXX_COMPILER mpicxx)
+set (CMAKE_CXX_COMPILER g++)
+
+file(GLOB source_files src/main.cpp src/*2d.cpp)
 
 include_directories(include)
 
 add_executable(acwv ${source_files})
+target_link_libraries(acwv ${VTK_LIBRARIES})
