--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,13 @@ jobs:
         id: version
         run: |
           echo ::set-output name=version::${GITHUB_REF#release/}
-        
+      
+      - name: Install dependencies
+        run: |
+          sudo apt-get install -y build-essential
+          sudo apt-get install -y libvtk7-dev
+          sudo apt-get install -y openmpi-bin libopenmpi-dev
+
       - name: Set up CMake
         run: |
           sudo apt-get update
