--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,7 +38,7 @@ jobs:
         
       - name: Archive build
         run: |
-          tar -czf acwv-${ steps.version.outputs.version }.tar.gz build
+          tar -czf acwv-${{ steps.version.outputs.version }}.tar.gz build
           
       - name: Generate release
         id: create_release
