--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,22 @@
 cmake_minimum_required(VERSION 3.10)
 project(acwv)
 
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules")
+find_package(PkgConfig REQUIRED)
 
-find_package(PETSc REQUIRED)
-include_directories(${PETSc_INCLUDE_DIRS})
-link_directories(${PETSc_LIBRARY_DIRS})
+if(DEFINED ENV{PETSC_DIR})
+  set (ENV{PKG_CONFIG_PATH} "$ENV{PETSC_DIR}/lib/pkgconfig:$ENV{PKG_CONFIG_PATH}")
+  pkg_search_module(PETSc REQUIRED PETSc>3.10)
+  if(PETSc_FOUND)
+     message(STATUS "PETSc ${PETSc_VERSION} was found!")
+     message(STATUS "PETSc_INCLUDE: ${PETSc_INCLUDE_DIRS} ")
+     message(STATUS "PETSc_LIBRARIES: ${PETSc_LINK_LIBRARIES} ")
+     SET(PETSC_ENABLE 1)
+     include_directories(${PETSc_INCLUDE_DIRS})
+     link_directories(${PETSc_LIBRARY_DIRS})
+  endif()
+else()
+  message(STATUS "PETSc was not founded! Please define PETSC_DIR var!!")
+endif()
 
 find_package(VTK REQUIRED)
 include(${VTK_USE_FILE})
